gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-linkage_dg.rs
extern "C" {
    #[linkage = "extern_weak"] static foo: *mut isize;
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

fn main() {}

